--- a/OctoTeste/Views/Shared/_Layout.cshtml
+++ b/OctoTeste/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - OctoTeste</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.mask.min.js"></script>
+   
 </head>
 <body>
     <header>
@@ -43,9 +46,10 @@
             &copy; 2021 - OctoTeste - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/jquery.mask.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
