--- a/OctoTeste/Views/Clientes/Edit.cshtml
+++ b/OctoTeste/Views/Clientes/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Cliente</h4>
 <hr />
@@ -18,12 +18,12 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cpf" class="control-label"></label>
+                <label asp-for="Cpf" class="control-label">CPF</label>
                 <input asp-for="Cpf" class="form-control" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="dataNascimento" class="control-label"></label>
+                <label asp-for="dataNascimento" class="control-label">Data de Nascimento</label>
                 <input asp-for="dataNascimento" class="form-control" />
                 <span asp-validation-for="dataNascimento" class="text-danger"></span>
             </div>
@@ -33,12 +33,12 @@
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoTelefone" class="control-label"></label>
+                <label asp-for="tipoTelefone" class="control-label">Tipo de Telefone</label>
                 <input asp-for="tipoTelefone" class="form-control" />
                 <span asp-validation-for="tipoTelefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cep" class="control-label"></label>
+                <label asp-for="Cep" class="control-label">CEP</label>
                 <input asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
@@ -48,13 +48,13 @@
                 <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoEndereco" class="control-label"></label>
+                <label asp-for="tipoEndereco" class="control-label">Tipo de Cobrança</label>
                 <input asp-for="tipoEndereco" class="form-control" />
                 <span asp-validation-for="tipoEndereco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Numero" class="control-label"></label>
-                <input asp-for="Numero" class="form-control" />
+                <input asp-for="Numero" type="text" class="form-control" />
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
