--- a/OctoTeste/Views/Clientes/Create.cshtml
+++ b/OctoTeste/Views/Clientes/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cpf" class="control-label">CPF</label>
-                <input id="txtCPF" asp-for="Cpf" class="form-control" />
+                <input id="CPF" asp-for="Cpf" class="form-control" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -87,7 +87,7 @@
             $('#nascimento').mask('00/00/0000');
             $('#txtCEP').mask('00000-000');
             $('#telefone').mask('(00) 0000-0000');
-            $('#txtCPF').mask('000.000.000-00',);
+            $('#CPF').mask('000.000.000-00',);
     </script>
 
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
