--- a/OctoTeste/wwwroot/css/site.css
+++ b/OctoTeste/wwwroot/css/site.css
@@ -13,17 +13,14 @@ a {
 }
 
 .btn-primary {
-    /* Auto Layout */
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
-    position: absolute;
     width: 93px;
     height: 39px;
     left: 302px;
     top: 441px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
