--- a/OctoTeste/Views/ClientePJs/Create.cshtml
+++ b/OctoTeste/Views/ClientePJs/Create.cshtml
@@ -1,14 +1,17 @@
-﻿@model OctoTeste.Models.Cliente
+﻿@model OctoTeste.Models.ClientePJ
 
-@{ ViewData["Title"] = "Edit"; }
-
-<h1>Editar</h1>
-
-<h4>Cliente</h4>
+@{
+    ViewData["Title"] = "Create";
+}
+<h1>Registro</h1>
+<br />
+<h4>Cliente PJ</h4>
 <hr />
+<script src="~/lib/jquery/jquery.min.js"></script>
+<script src="~/js/jquery.mask.min.js" type="text/javascript" asp-append-version="true"></script>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
@@ -16,28 +19,33 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cpf" class="control-label">CPF</label>
-                <input asp-for="Cpf" class="form-control" />
-                <span asp-validation-for="Cpf" class="text-danger"></span>
+                <label asp-for="Cnpj" class="control-label">CNPJ</label>
+                <input id="Cnpj" asp-for="Cnpj" class="form-control" />
+                <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="dataNascimento" class="control-label">Data de Nascimento</label>
-                <input asp-for="dataNascimento" class="form-control" />
+                <input id="nascimento" asp-for="dataNascimento" class="form-control" />
                 <span asp-validation-for="dataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefone" class="control-label"></label>
-                <input asp-for="Telefone" class="form-control" />
+                <input id="telefone" type="text" asp-for="Telefone" class="form-control" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoTelefone" class="control-label">Tipo de Telefone</label>
-                <input asp-for="tipoTelefone" class="form-control" />
+                <label asp-for="tipoTelefone" class="control-label">Escolha o tipo de telefone:</label>
+                <select asp-for="tipoTelefone" class="custom-select">
+                    <option selected>Escolha uma Opção</option>
+                    <option value="Celular">Celular</option>
+                    <option value="Residencial">Residencial</option>
+                    <option value="Comercial">Comercial</option>
+                </select>
                 <span asp-validation-for="tipoTelefone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Cep" class="control-label">CEP</label>
-                <input asp-for="Cep" class="form-control" />
+                <input id="txtCEP" asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,8 +54,14 @@
                 <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoEndereco" class="control-label">Tipo de Cobrança</label>
-                <input asp-for="tipoEndereco" class="form-control" />
+                <label asp-for="tipoEndereco" class="control-label">Escolha o tipo de cobrança:</label>
+                <select asp-for="tipoEndereco" class="custom-select">
+                    <option selected>Escolha uma Opção</option>
+                    <option value="Cobranca">Cobrança</option>
+                    <option value="Correspondencia">Correspondência</option>
+                    <option value="Entrega">Entrega</option>
+                    <option value="Residencial">Residencial</option>
+                </select>
                 <span asp-validation-for="tipoEndereco" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -55,17 +69,17 @@
                 <input asp-for="Numero" type="text" class="form-control" />
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Registrar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
+
 
 @section Scripts {
     <script>
@@ -73,8 +87,19 @@
             $('#nascimento').mask('00/00/0000');
             $('#txtCEP').mask('00000-000');
             $('#telefone').mask('(00) 0000-0000');
-            $('#CPF').mask('000.000.000-00', { reverse: true });;
+            $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
         })
     </script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
 }
+
+<footer class="border-top footer text-muted">
+    <div class="container">
+        &copy; 2021 - OctoTeste - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+</footer>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+
