--- a/OctoTeste/Views/ClientePJs/Edit.cshtml
+++ b/OctoTeste/Views/ClientePJs/Edit.cshtml
@@ -1,10 +1,12 @@
-﻿@model OctoTeste.Models.Cliente
+﻿@model OctoTeste.Models.ClientePJ
 
-@{ ViewData["Title"] = "Edit"; }
+@{
+    ViewData["Title"] = "Edit";
+}
 
-<h1>Editar</h1>
+<h1>Edit</h1>
 
-<h4>Cliente</h4>
+<h4>ClientePJ</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,9 +18,9 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cpf" class="control-label">CPF</label>
-                <input asp-for="Cpf" class="form-control" />
-                <span asp-validation-for="Cpf" class="text-danger"></span>
+                <label asp-for="Cnpj" class="control-label">CNPJ</label>
+                <input asp-for="Cnpj" class="form-control" />
+                <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="dataNascimento" class="control-label">Data de Nascimento</label>
@@ -31,8 +33,13 @@
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoTelefone" class="control-label">Tipo de Telefone</label>
-                <input asp-for="tipoTelefone" class="form-control" />
+                <label asp-for="tipoTelefone" class="control-label">Escolha o tipo de telefone:</label>
+                <select asp-for="tipoTelefone" class="custom-select">
+                    <option selected>Escolha uma Opção</option>
+                    <option value="Celular">Celular</option>
+                    <option value="Residencial">Residencial</option>
+                    <option value="Comercial">Comercial</option>
+                </select>
                 <span asp-validation-for="tipoTelefone" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -46,13 +53,19 @@
                 <span asp-validation-for="Endereco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="tipoEndereco" class="control-label">Tipo de Cobrança</label>
-                <input asp-for="tipoEndereco" class="form-control" />
+                <label asp-for="tipoEndereco" class="control-label">Escolha o tipo de cobrança:</label>
+                <select asp-for="tipoEndereco" class="custom-select">
+                    <option selected>Escolha uma Opção</option>
+                    <option value="Cobranca">Cobrança</option>
+                    <option value="Correspondencia">Correspondência</option>
+                    <option value="Entrega">Entrega</option>
+                    <option value="Residencial">Residencial</option>
+                </select>
                 <span asp-validation-for="tipoEndereco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Numero" class="control-label"></label>
-                <input asp-for="Numero" type="text" class="form-control" />
+                <input asp-for="Numero" class="form-control" />
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
@@ -73,7 +86,7 @@
             $('#nascimento').mask('00/00/0000');
             $('#txtCEP').mask('00000-000');
             $('#telefone').mask('(00) 0000-0000');
-            $('#CPF').mask('000.000.000-00', { reverse: true });;
+            $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
         })
     </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
