--- a/OctoTeste/Views/ClientePJs/Create.cshtml
+++ b/OctoTeste/Views/ClientePJs/Create.cshtml
@@ -87,7 +87,7 @@
             $('#nascimento').mask('00/00/0000');
             $('#txtCEP').mask('00000-000');
             $('#telefone').mask('(00) 0000-0000');
-            $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
+            $('#Cnpj').mask('00.000.000/0000-00', { reverse: true });
         })
     </script>
 
