--- a/OctoTeste/Views/ClientePJs/Edit.cshtml
+++ b/OctoTeste/Views/ClientePJs/Edit.cshtml
@@ -19,17 +19,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cnpj" class="control-label">CNPJ</label>
-                <input asp-for="Cnpj" class="form-control" />
+                <input id="Cnpj" asp-for="Cnpj" class="form-control" />
                 <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="dataNascimento" class="control-label">Data de Nascimento</label>
-                <input asp-for="dataNascimento" class="form-control" />
+                <input id="nascimento" asp-for="dataNascimento" class="form-control" />
                 <span asp-validation-for="dataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefone" class="control-label"></label>
-                <input asp-for="Telefone" class="form-control" />
+                <input id="telefone" asp-for="Telefone" class="form-control" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cep" class="control-label">CEP</label>
-                <input asp-for="Cep" class="form-control" />
+                <input id="txtCEP" asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -86,8 +86,9 @@
             $('#nascimento').mask('00/00/0000');
             $('#txtCEP').mask('00000-000');
             $('#telefone').mask('(00) 0000-0000');
-            $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
+            $('#Cnpj').mask('00.000.000/0000-00', { reverse: true });
         })
     </script>
+
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
