--- a/OctoTeste/Views/Clientes/Edit.cshtml
+++ b/OctoTeste/Views/Clientes/Edit.cshtml
@@ -17,17 +17,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cpf" class="control-label">CPF</label>
-                <input asp-for="Cpf" class="form-control" />
+                <input id="CPF" asp-for="Cpf" class="form-control" />
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="dataNascimento" class="control-label">Data de Nascimento</label>
-                <input asp-for="dataNascimento" class="form-control" />
+                <input id="nascimento" asp-for="dataNascimento" class="form-control" />
                 <span asp-validation-for="dataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Telefone" class="control-label"></label>
-                <input asp-for="Telefone" class="form-control" />
+                <input id="telefone" asp-for="Telefone" class="form-control" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Cep" class="control-label">CEP</label>
-                <input asp-for="Cep" class="form-control" />
+                <input id="txtCEP" asp-for="Cep" class="form-control" />
                 <span asp-validation-for="Cep" class="text-danger"></span>
             </div>
             <div class="form-group">
